# HB_EPID_Revocation

./: .gitignore  CMakeLists.txt  LICENSE  Picnic.cmake  README.TXT  README.md  runjobs_129  runjobs_255
Common/: Hb_epid_revocation_lists.cpp  Hbgs_epid_signature.cpp  Io_utils.cpp  Lowmc32.cpp  Lowmc64.cpp  Mpc_lowmc.cpp  Mpc_lowmc64.cpp  Mpc_seeds_and_tapes.cpp  Mpc_signature_utils.cpp  Mpc_sigrl_entries.cpp  Mpc_utils.cpp  Mpc_working_data.cpp  Picnic_mpc_functions.c
Generate_epid_srl/: CMakeLists.txt  Generate_epid_srl.cpp  Generate_epid_srl.h
HBGS_picnic/: Makefile  example  picnic.c  picnic.h  picnic_impl.c
Hbgs_sigrl_list_test/: CMakeLists.txt  Hbgs_sigrl_list_test.cpp  Hbgs_sigrl_list_test.h
Include/: Clock_utils.h  Hb_epid_issuer.h  Hb_epid_revocation_lists.h  Hbgs_epid_signature.h  Hbgs_lowmc_hash.h  Hbgs_param.h  Io_utils.h  Lowmc32.h  Lowmc64.h  Mem_uint.h  Mpc_lowmc.h  Mpc_lowmc64.h  Mpc_parameters.h  Mpc_seeds_and_tapes.h  Mpc_sign.h  Mpc_signature_utils.h  Mpc_sigrl_entries.h  Mpc_utils.h  Mpc_verify.h  Mpc_working_data.h  Picnic_mpc_functions.h
RL_data/: rl_129_10.srlist  rl_129_100.srlist  rl_129_1000.srlist  rl_129_2.srlist  rl_129_3.srlist  rl_129_4.srlist  rl_129_5.srlist  rl_129_500.srlist  rl_255_10.srlist  rl_255_100.srlist  rl_255_1000.srlist  rl_255_500.srlist
